kubernetes/ingress/ingress-ibm.yml
# Licensed to the Apache Software Foundation (ASF) under one or more contributor
# license agreements; and to You under the Apache License, Version 2.0.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ow-ingress
  namespace: openwhisk
  annotations:
    ingress.bluemix.net/rewrite-path: "serviceName=nginx rewrite=/;serviceName=apigateway rewrite=/"
spec:
  tls:
  - hosts:
    - <ibmdomain>
    secretName: <ibmtlssecret>
  rules:
  - host: <ibmdomain>
    http:
      paths:
      - path: /openwhisk/
        backend:
          serviceName: nginx
          servicePort: http
      - path: /apigateway/
        backend:
          serviceName: apigateway
          servicePort: mgmt
