kubernetes/ingress/ingress-simple.yml
# Licensed to the Apache Software Foundation (ASF) under one or more contributor
# license agreements; and to You under the Apache License, Version 2.0.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ow-ingress
  namespace: openwhisk
spec:
  backend:
    serviceName: nginx
    servicePort: https-api
  backend:
    serviceName: apigateway
    servicePort: mgmt
